# anaStruct

./: .coverage  .gitignore  .pylintrc  .travis.yml  CITATION.cff  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  _custom_build.py  build_cython_ext.py  concrete.py  cross_section.py  dev_requirements.txt  environment.yaml  getst.py  intersection.py  mypy.ini  plot_requirements.txt  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py  stifness.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  greetings.yml  release.yaml  test.yaml
StructuralEngineering/: basic.py  concrete.py  cross_section.py  intersection.py  trigonometry.py  version.py  vertex.py
StructuralEngineering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
StructuralEngineering/FEM/: beams.py  elements.py  node.py  plotter.py  postprocess.py  system.py
StructuralEngineering/FEM/examples/: ex_1.py  ex_10_dead_load.py  ex_11.py  ex_1_2.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6_fixed_hing.py  ex_6_fixed_hinge.py  ex_7_rotational_spring.py  ex_8_non_linear_portal.py  ex_9_vertical_spring.py  run.py
StructuralEngineering/FEM/tests/: ex_1.py  ex_2.py  ex_3.py  run_test_1.py  run_test_3.py  test.py  test_1.py  test_3.py  test_plotter.py
StructuralEngineering/material/: hea.csv  profile.py
anastruct/: __init__.py  _version.py  basic.py  concrete.py  cross_section.py  functions.py  getst.py  intersection.py  types.py  version.py  vertex.py
anastruct/cython/: basic.py  cbasic.pyx
anastruct/dxfloader/: dxfloader.py  geo_utils.py  test.dxf  test.py
anastruct/fem/: elements.py  node.py  plotter.py  postprocess.py  system.py
anastruct/fem/background/: distributed_ax_force.ipynb  primary_m_v.ipynb
anastruct/fem/cython/: celements.pyx  elements.py
anastruct/fem/examples/: ex_1.py  ex_10_dead_load.py  ex_11.py  ex_12.py  ex_13.py  ex_14.py  ex_15.py  ex_16.py  ex_17_gnl.py  ex_18_discretize.py  ex_19_num_displacements.py  ex_1_2.py  ex_2.py  ex_20_insert_node.py  ex_21_rotate_force.py  ex_22_loadcombination_doc.py  ex_23_sectionbase.py  ex_24_geting_data_from_dxf.py  ex_24_model.dxf  ex_25_high_midspan_point.py  ex_26_deflection.py  ex_3.py  ex_4.py  ex_5.py  ex_6_fixed_hinge.py  ex_7_rotational_spring.py  ex_8_non_linear_portal.py  ex_9_vertical_spring.py  run.py  water_acc.ipynb
anastruct/fem/plotter/: __init__.py  element.py  functions.py  mpl.py  null.py  values.py
anastruct/fem/system_components/: __init__.py  assembly.py  solver.py  util.py
anastruct/fem/tests/: test.py  test_e2e_original.py  test_plotter.py  test_sectionbase.py
anastruct/fem/tests/benchmark/: benchmark.py  non-linear-solve.csv  non_lin_frame.py  structure_creation.py  system-creation.csv
anastruct/fem/tests/benchmark/cython/: csystem.pyx
anastruct/fem/util/: load.py  modify.py
anastruct/material/: ipe.csv  profile.py  units.py
anastruct/preprocess/: truss.py  truss_class.py
anastruct/sectionbase/: __init__.py  properties.py  sectionbase.py  sectionbase_AmericanSectionDatabase.xml  sectionbase_BritishSectionDatabase.xml  test_sectionbase.py  units.py
anastruct/sectionbase/data/: sectionbase_EuropeanSectionDatabase.xml
anastruct/truss/: truss.py  truss_class.py
conda/: build.sh  meta.yaml
doc/: Makefile  conf.py  index.rst  make.bat
doc/source/: SystemElements.rst  calculation.rst  conf.py  element_node_interaction.rst  elements.rst  examples.rst  getting_started.rst  index.rst  installation.rst  loadcases.rst  loads.rst  modelling_methods.rst  plotting.rst  post_processing.rst  ref.rst  saving.rst  supports.rst  system_module.rst  vertex.rst
examples/: ex_1.py  ex_10_dead_load.py  ex_11.py  ex_13.py  ex_15.py  ex_18_discretize.py  ex_19_num_displacements.py  ex_1_2.py  ex_20_insert_node.py  ex_23_sectionbase.py  ex_3.py  ex_6_fixed_hinge.py  ex_7_rotational_spring.py  ex_8_non_linear_portal.py  ex_9_vertical_spring.py  water_acc.ipynb
tests/: pytest.ini  test_analytical.py  test_e2e.py  test_e2e_original.py  test_plotter.py  test_sectionbase.py  test_stiffness.py  test_stifness.py  utils.py
tests/benchmark/: benchmark.py  non_lin_frame.py  system-creation.csv
tests/fixtures/: e2e_fixtures.py  fem_fixtures.py
