[build-system]
requires = [
    "poetry-core>=1.2.0",
    "setuptools>=61.0",
    "cython>=3.0",
    "numpy>=2.0.0rc1",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anastruct"
version = "1.6.1"
authors = ["Ritchie Vink <ritchie46@gmail.com>"]
maintainers = ["Brooks Smith <smith120bh@gmail.com>"]
description = "Finite element analysis of 2D structures"
keywords = [
    "FEA",
    "finite element",
    "structural engineering",
    "structural analysis",
]
license = "GPL-3.0-or-later"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
readme = "README.md"
homepage = "https://github.com/ritchie46/anaStruct"
repository = "https://github.com/ritchie46/anaStruct"
documentation = "http://anastruct.readthedocs.io"
packages = [{ include = "anastruct" }]
include = ["py.typed", "*.pyx"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.5"
scipy = ">=1.10.0"
matplotlib = { version = ">=3.0", optional = true }

[tool.poetry.group.dev.dependencies]
numpy = "==2.2.3"
scipy = "==1.15.2"
matplotlib = "==3.9.4"

[tool.poetry.group.test.dependencies]
pylint = "==3.3.4"
mypy = "==1.15.0"
black = { version = "==24.10.0", extras = ["jupyter"] }
pytest = "==8.3.4"
pytest-describe = "==2.2.0"
pytest-pspec = "==0.0.4"
pytest-raises = "==0.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "==8.1.3"
sphinx_autodoc_typehints = "*"

[tool.poetry.extras]
plot = ["matplotlib"]

[tool.poetry.build]
script = "build_cython_ext.py"
generate-setup-file = true

[tool.pylint]
disable = [
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-statements",
    "too-many-branches",
    "too-many-nested-blocks",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "protected-access",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-many-lines",
    "duplicate-code",
    "invalid-name",
    "logging-fstring-interpolation",
]
max-line-length = 120
py-version = 3.8

[tool.mypy]
packages = "anastruct"
python_version = "3.10"
strict = true
allow_any_generics = true
implicit_reexport = true
strict_optional = false
explicit_package_bases = true
exclude = ["build", "dist", "tests", "doc"]

[[tool.mypy.overrides]]
module = [
    "anastruct.fem.cython.celements",
    "anastruct.fem.cython.cbasic",
    "Cython.build",
]
ignore_missing_imports = true

[tool.black]
target-version = ['py310', 'py311', 'py312']
